Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29135

Some toolbars do not immediately adapt to color change

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • Qt Creator 11.0.0
    • Qt Creator 11.0.0-beta1
    • All Other Issues
    • None
    • e44d0c57d (master)

    Description

      When Shft+clicking on the upper left toolbar corner and selecting a new color, not all toolbars immediately adapt. Only, after enforcing the repaint (e.g. by resizing), they do.

      The toolbars in embedded Utils::FancyMainWindow seem to be affected by this.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes